removed accidentially used Java 9 feature